--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>businesses code</title>
+    <title>Oman Online</title>
 </head>
 <body>
-    
+    Oman Online
 </body>
 </html>
