--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Oman Online</title>
 </head>
 <body>
-    Oman Online
+   <a href="https://omanonline.org"> Oman Online</a>
 </body>
 </html>
